<resources>
    <string name="app_name">My Movies</string>
    <string name="poster_of_movie">Poster of movie</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="remove_from_favourite">Remove from Favourite</string>
    <string name="item_main">Main</string>
    <string name="item_favourite">Favourite</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="image_big_poster">Image big poster</string>
    <string name="image_favourite_movie">Image favourite movie</string>
    <string name="label_title">Title:</string>
    <string name="title">Title</string>
    <string name="label_original_title">Original title:</string>
    <string name="original_title">Original title</string>
    <string name="label_rating">Rating:</string>
    <string name="rating">Rating</string>
    <string name="label_release_date">Release date:</string>
    <string name="release_date">Release date</string>
    <string name="label_description">Description:</string>
    <string name="over_view">Description</string>
    <string name="label_trailers">Трейлеры:</string>
</resources>